--- a/style.css
+++ b/style.css
@@ -1,18 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,600;0,700;1,400;1,700&display=swap');
-*{
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'poppins',sans-serif;
+    font-family: 'poppins', sans-serif;
 }
-body{
-  background: aqua;
+
+body {
+    background: aqua;
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
 }
-.container{
+
+.container {
     position: relative;
     width: 100%;
     max-width: 1000px;
@@ -21,19 +24,21 @@ body{
     display: grid;
     gap: 20px;
     grid-template-columns: 1fr 2fr;
-    box-shadow: 0 35px 55px rgba(0,0,0,0.1);
+    box-shadow: 0 35px 55px rgba(0, 0, 0, 0.1);
     margin: 20px auto;
     padding: 5px;
     box-sizing: border-box;
 
 }
-.container .left-side{
+
+.container .left-side {
     position: relative;
     background: blue;
     padding: 40px;
 
 }
-.profiletexte{
+
+.profiletexte {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -41,21 +46,24 @@ body{
     padding-bottom: 20px;
     border-bottom: 1px solid aqua;
 }
-.profiletexte .imgBx{
+
+.profiletexte .imgBx {
     position: relative;
     width: 200px;
     height: 250px;
     border-radius: 50%;
     overflow: hidden;
 }
-.profiletexte .imgBx img{
+
+.profiletexte .imgBx img {
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
-.profiletexte h2{
+
+.profiletexte h2 {
     color: #fff;
     font-size: 1.5em;
     margin-top: 20px;
@@ -66,56 +74,67 @@ body{
 
 }
 
-.profiletexte h2 span{
+.profiletexte h2 span {
     font-size: 0.8em;
     font-weight: 300;
 }
-.contactInfo{
+
+.contactInfo {
     padding-top: 40px;
 
 }
-.title{
+
+.title {
     color: #fff;
     text-transform: uppercase;
     font-weight: 600;
     letter-spacing: 1px;
     margin-bottom: 20px;
 }
-.contactInfo ul{
+
+.contactInfo ul {
     position: relative;
 }
-.contactInfo ul li{
+
+.contactInfo ul li {
     position: relative;
     list-style: none;
     margin: 10px 0;
     cursor: pointer;
 }
-.contactInfo ul li .icon{
+
+.contactInfo ul li .icon {
     display: inline-block;
     width: 20px;
     font-size: 18px;
     color: aqua;
 }
-.contactInfo ul li span{
+
+.contactInfo ul li span {
     color: #fff;
     font-weight: 300;
 }
-.contactInfo.education li{
+
+.contactInfo.education li {
     margin-bottom: 15px;
 }
-.contactInfo.education h5{
+
+.contactInfo.education h5 {
     color: aqua;
     font-weight: 500;
 }
-.contactInfo.education h4:nth-child(2){
+
+.contactInfo.education h4:nth-child(2) {
     color: #ffffff;
     font-weight: 400;
 }
-.contactInfo.education h4{
+
+.contactInfo.education h4 {
     color: #fff;
     font-weight: 300;
 }
-.contactInfo.language .percent{
+
+.contactInfo.language .percent {
     position: relative;
     width: 100%;
     height: 6px;
@@ -124,7 +143,8 @@ body{
     margin-top: 5px;
     border-radius: 5px;
 }
-.contactInfo.language .percent div{
+
+.contactInfo.language .percent div {
     position: absolute;
     top: 0;
     left: 0;
@@ -132,42 +152,51 @@ body{
     background: #fff;
     border-radius: 5px;
 }
-.container :right-side{
+
+.container :right-side {
     position: relative;
     background: #fff;
     padding: 40px;
-    
+
 }
-.about{
+
+.about {
     margin-bottom: 50px;
 
 }
-.about:last-child{
+
+.about:last-child {
     margin-bottom: 0;
 
 }
-.title2{
+
+.title2 {
     color: blue;
     text-transform: uppercase;
     letter-spacing: 1px;
     margin-bottom: 10px;
 }
-p{
+
+p {
     color: rgb(1, 2, 46);
 }
-.about .box{
+
+.about .box {
     display: flex;
     flex-direction: row;
     margin: 20px 0;
 }
-.about .box .year_company{
+
+.about .box .year_company {
     min-width: 150px;
 }
-.about .box .year_company h5{
+
+.about .box .year_company h5 {
     text-transform: uppercase;
-   color:  aqua;
+    color: aqua;
 }
-.skills .box{
+
+.skills .box {
     position: relative;
     width: 100%;
     display: grid;
@@ -175,66 +204,89 @@ p{
     justify-content: center;
     align-items: center;
 }
-.skills .box h4{
+
+.skills .box h4 {
     text-transform: uppercase;
-    color:black; 
+    color: black;
     font-weight: 500;
 }
-.skills .box .percent{
+
+.skills .box .percent {
     position: relative;
     width: 90%;
     height: 10px;
     background: aqua;
     border-radius: 5px;
 }
-.skills .box .percent div{
+
+.skills .box .percent div {
     position: absolute;
     top: 0;
     left: 0;
     height: 90%;
-    background:blue;
+    background: blue;
     border-radius: 5px;
 }
-.interest ul{
+
+.interest ul {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
 
 }
-.interest ul li{
+
+.interest ul li {
     list-style: none;
     color: aqua;
     font-weight: 500;
     margin: 10px 0;
 
 }
-.interest ul li .fa{
+
+.interest ul li .fa {
     color: blue;
     font-size: 18px;
     width: 20px;
 }
-@media(max-width:1000px){
-    .container{
+
+@media(max-width:1000px) {
+    .container {
         margin: 10px 0;
         grid-template-columns: 1fr;
         width: 100%;
         padding: 15px;
 
     }
-    .interest ul{
+
+    .interest ul {
         grid-template-columns: repeat(2, 1fr);
     }
 }
-@media(max-width:600px){
-    .about .box{
+
+#typing-text::after {
+    content: "|";
+    animation: blink 0.6s infinite;
+}
+
+@keyframes blink {
+    50% {
+        opacity: 0;
+    }
+}
+
+@media(max-width:600px) {
+    .about .box {
         flex-direction: column;
     }
-    .about .box .year_company{
+
+    .about .box .year_company {
         margin-bottom: 5px;
     }
-    .interest ul{
+
+    .interest ul {
         grid-template-columns: repeat(1, 1fr);
     }
-    .skills .box{
+
+    .skills .box {
         grid-template-columns: repeat(1, 1fr);
     }
 }
